Ajout de UserBundle Partie 1

--- a/src/FrontBundle/Resources/views/Default/index.html.twig
+++ b/src/FrontBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,97 @@
-Front
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>{% block title %}GES-COPROPRIO{% endblock %}</title>
+
+    {% block stylesheets %}
+        {# On charge le CSS de bootstrap depuis le site directement #}
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    {% endblock %}
+
+</head>
+
+<body>
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="">GES-COPROPRIO</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Discussions<span class="sr-only">(current)</span></a></li>
+                <li><a href="#">Projets</a></li>
+                <li><a href="#">Réunions</a></li>
+            </ul>
+            <form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Recherche">
+                </div>
+                <button type="submit" class="btn btn-default">Chercher</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Notifications</a></li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Connecté en tant que <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Gerer mon compte</a></li>
+                        <li><a href="#">Mes méssages</a></li>
+                        <li><a href="#">Mes discussions</a></li>
+                        <li><a href="#">Vérsements</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Déconnexion</a></li>
+                    </ul>
+                </li>
+
+                <li><a href="#">Connexion</a></li>
+
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
+<div class="container">
+    <div id="header" class="jumbotron">
+        <h1 class="text-center">GES-COPROPRIO</h1>
+        <p class="text-center">
+            La solution de gestion de coproprio
+        </p>
+    </div>
+
+    <div class="row">
+        <div id="content" class="col-md-12">
+            {% block body %}
+                    Front
+            {% endblock %}
+        </div>
+    </div>
+
+    <hr>
+
+    <footer>
+        <p class="text-center">KC-DEV © {{ 'now'|date('Y') }} ENTREPRISE.</p>
+    </footer>
+</div>
+
+
+{% block javascripts %}
+    {# Ajoutez ces lignes JavaScript si vous comptez vous servir des fonctionnalités du bootstrap Twitter #}
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+{% endblock %}
+
+</body>
+</html>
