--- a/src/FrontBundle/Resources/views/Default/index.html.twig
+++ b/src/FrontBundle/Resources/views/Default/index.html.twig
@@ -67,7 +67,7 @@
     <div id="header" class="jumbotron">
         <h1 class="text-center">GES-COPROPRIO</h1>
         <p class="text-center">
-            La solution de gestion de coproprio
+            La solution de gestion de copropriéte
         </p>
     </div>
 
