--- a/src/FrontBundle/Resources/views/base.html.twig
+++ b/src/FrontBundle/Resources/views/base.html.twig
@@ -31,7 +31,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Discussions<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="{{ path('filemessages_index') }}">Discussions<span class="sr-only">(current)</span></a></li>
                 <li><a href="#">Projets</a></li>
                 <li><a href="#">Réunions</a></li>
             </ul>
