--- a/src/FrontBundle/Resources/views/base.html.twig
+++ b/src/FrontBundle/Resources/views/base.html.twig
@@ -15,6 +15,7 @@
 
 <body>
 
+{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -34,6 +35,7 @@
                 <li class="active"><a href="{{ path('filemessages_index') }}">Discussions<span class="sr-only">(current)</span></a></li>
                 <li><a href="#">Projets</a></li>
                 <li><a href="#">Réunions</a></li>
+                <li><a href="{{ path('charge_index') }}">Charges</a></li>
             </ul>
             <form class="navbar-form navbar-left">
                 <div class="form-group">
@@ -48,9 +50,9 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Connecté en tant que {{ app.user.username }} <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Gerer mon compte</a></li>
-                            <li><a href="#">Mes méssages</a></li>
+                            <li><a href="#">Mes messages</a></li>
                             <li><a href="#">Mes discussions</a></li>
-                            <li><a href="#">Vérsements</a></li>
+                            <li><a href="#">Versements</a></li>
                             <li role="separator" class="divider"></li>
                             <li> <a href="{{ path('fos_user_security_logout') }}">Déconnexion</a></li>
                         </ul>
@@ -62,7 +64,7 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-
+{% endif %}
 <div class="container">
     <div id="header" class="jumbotron">
         <h1 class="text-center">GES-COPROPRIO</h1>
