--- a/src/FrontBundle/Resources/views/filemessages/show.html.twig
+++ b/src/FrontBundle/Resources/views/filemessages/show.html.twig
@@ -39,10 +39,12 @@
         <li>
             <a href="{{ path('filemessages_edit', { 'id': fileMessage.id }) }}">Edit</a>
         </li>
+        {% if is_granted('ROLE_ADMIN') %}
         <li>
             {{ form_start(delete_form) }}
                 <input type="submit" value="Delete">
             {{ form_end(delete_form) }}
         </li>
+        {% endif %}
     </ul>
 {% endblock %}
