Ajout de la commande Symfony partie-1

--- a/src/FrontBundle/Resources/views/Default/index.html.twig
+++ b/src/FrontBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,5 @@
 {%  extends "FrontBundle::base.html.twig" %}
 
 {% block body %}
-Front
+    <h1 class="text-center">Page d'accueil du site, page en construction :=) .</h1>
 {% endblock %}
