--- a/src/FrontBundle/Resources/views/base.html.twig
+++ b/src/FrontBundle/Resources/views/base.html.twig
@@ -26,16 +26,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="">GES-COPROPRIO</a>
+            <a class="navbar-brand" href="{{ path('front_homepage') }}">GES-COPROPRIO</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="{{ path('filemessages_index') }}">Discussions<span class="sr-only">(current)</span></a></li>
+                <li><a href="{{ path('charge_index') }}">Charges</a></li>
                 <li><a href="#">Projets</a></li>
                 <li><a href="#">Réunions</a></li>
-                <li><a href="{{ path('charge_index') }}">Charges</a></li>
             </ul>
             <form class="navbar-form navbar-left">
                 <div class="form-group">
@@ -52,7 +52,8 @@
                             <li><a href="#">Gerer mon compte</a></li>
                             <li><a href="#">Mes messages</a></li>
                             <li><a href="#">Mes discussions</a></li>
-                            <li><a href="#">Versements</a></li>
+                            <li><a href="#">Mes Versements</a></li>
+                            <li><a href="#">Mes Notifications</a></li>
                             <li role="separator" class="divider"></li>
                             <li> <a href="{{ path('fos_user_security_logout') }}">Déconnexion</a></li>
                         </ul>
