Resolution de Bugs

--- a/src/UserBundle/Resources/views/layout.html.twig
+++ b/src/UserBundle/Resources/views/layout.html.twig
@@ -16,5 +16,8 @@
 {# On définit ce block, dans lequel vont venir s'insérer les autres vues du bundle #}
 {% block fos_user_content %}
 {% endblock fos_user_content %}
+{% block fos_user_content_2 %}
+{% endblock fos_user_content_2 %}
+
 
 {% endblock %}
