--- a/src/FrontBundle/Resources/views/base.html.twig
+++ b/src/FrontBundle/Resources/views/base.html.twig
@@ -15,7 +15,6 @@
 
 <body>
 
-{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -49,7 +48,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Connecté en tant que {{ app.user.username }} <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Gerer mon compte</a></li>
+                            <li><a href="{{ path('fos_user_profile_edit') }}">Modifier mon compte</a></li>
                             <li><a href="#">Mes messages</a></li>
                             <li><a href="#">Mes discussions</a></li>
                             <li><a href="#">Mes Versements</a></li>
@@ -65,7 +64,6 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-{% endif %}
 <div class="container">
     <div id="header" class="jumbotron">
         <h1 class="text-center">GES-COPROPRIO</h1>
